--- a/frontend/src/index.module.css
+++ b/frontend/src/index.module.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .rootContainer {
     display: flex;
     justify-content: center;
@@ -9,3 +13,27 @@
     justify-content: center;
     align-items: center;
 }
+
+body {
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  }
+
+  a {
+    color: #00B7FF;
+  }
+
+  h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
+  body, header, nav {
+    font-size: 1rem;
+    color: inherit;
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    font-weight: normal;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
