--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -1,164 +1,88 @@
-body {
-    overflow: hidden;
-    margin: 0;
-  }
-
-#nav {
+.navbar {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(184, 38, 37);
   width: 100vw;
-  height: 80px;
+  max-width: 1600px;
+  height: 50px;
   position: sticky;
-  top: 0vh;
-  z-index: 21;
+  top: 0px;
+  z-index: 100;
 }
 
-#nav-div {
+.navList {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  width: 80vw;
-  height: 80px;
-  z-index: 21;
+  width: 80%;
+  height: 50px;
+  padding: 0px;
+  margin: 0px;
 }
 
-#logo {
-  background-image: url("../Brand Assets/logo/CookNook Logo - White.png");
+.navItem {
+  list-style: none;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  margin: 0px;
+}
+
+.logoLink {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  background-image: url("../../Assets/Logo/white.png");
   background-size: contain;
   background-repeat: no-repeat;
-  min-width: 200px;
-  height: 80px;
-  z-index: 21;
-  margin-top: 40px;
-  margin-right: 50px;
+  height: 50px;
 }
 
-#questions {
-  font-family: din-2014;
+.navLink {
+  font-family: din-2014, sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  text-decoration: none;
+}
+
+.navLink:hover {
+  text-decoration: underline;
+}
+
+.question {
+  font-family: din-2014, sans-serif;
   font-size: 20px;
   font-weight: 700;
   font-style: normal;
   letter-spacing: 1px;
   color: white;
-  background-color: rgba(1, 1, 1, 0);
-  text-decoration: none;
-  z-index: 21;
-  margin-right: 20px;
-}
-
-#topics {
-  font-family: din-2014;
-  font-size: 20px;
-  font-weight: 700;
-  font-style: normal;
-  letter-spacing: 1px;
-  color: white;
-  background-color: rgba(1, 1, 1, 0);
-  text-decoration: none;
-  margin-right: 20px;
-}
-
-#form {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  height: 80px;
-  width: 13vw;
-}
-
-#searchbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  background-color:rgb(184, 38, 37);
-  border: 0.25px solid white;
-  border-radius: 0.5rem;
-  height: 45px;
-  min-width: 200px;
-  margin-right: 20px;
-  position: relative;
-}
-
-#search-icon {
-  position: absolute;
-  left: 10px;
-  width: 20px;
-  height: 20px;
-  background-image: url("../Brand Assets/icons/CookNook\ -\ Magnify\ Icon-14.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#search-input{
-  position: absolute;
-  right: -10px;
-  height:40px;
-  min-width:150px;
-  background-color:rgba(1, 1, 1, 0);
-  border: 0px;
-  color: white;
-}
-
-#search-input:focus {
-  outline: none;
-}
-
-#search-input::-webkit-search-cancel-button {
-  -webkit-appearance: none;
-  background-image: url("../Brand Assets/icons/CookNook\ -\ Cancel\ Button-01.png");
-  background-size: contain;
-  width: 10px;
-  height: 10px;
+  text-decoration: none;
   cursor: pointer;
-  margin-right: 10px;
 }
 
-#search-input::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: din-2014;
-  font-size: 13px;
-  font-weight: 400;
-  font-style: normal;
-}
-
-#search-input:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: din-2014;
-  font-size: 13px;
-  font-weight: 400;
-  font-style: normal;
-}
-
-#search-input::-moz-input-placeholder {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: din-2014;
-  font-size: 13px;
-  font-weight: 400;
-  font-style: normal;
-}
-
-#search-input:-moz-input-placeholder {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: din-2014;
-  font-size: 13px;
-  font-weight: 400;
-  font-style: normal;
-}
-
-#logout {
-  font-family: din-2014;
+.logout {
+  font-family: din-2014, sans-serif;
   font-size: 20px;
   font-weight: 700;
   font-style: normal;
   letter-spacing: 1px;
   color: white;
   text-decoration: none;
-  background-color: transparent;
-  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -177,5 +101,17 @@ body {
   height: 40px;
   border-radius: 8px !important;
   cursor: pointer;
+  margin-right: 20px;
+}
+
+#topics {
+  font-family: din-2014;
+  font-size: 20px;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: 1px;
+  color: white;
+  background-color: rgba(1, 1, 1, 0);
+  text-decoration: none;
   margin-right: 20px;
 }
