--- a/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/frontend/src/components/Sidebar/Sidebar.module.css
@@ -1,220 +1,55 @@
-#home-sidebar-container {
+.sidebar {
     display: flex;
     flex-direction: column;
     background-color: #EFEFEF;
-    height: 0px;
-    min-width: 150px;
-    position: fixed;
-    top: 100px;
-    left: 30px;
+    height: 550px;
+    width: 150px;
     border: #DDDDDD solid 1px;
+    border-radius: 5px;
 }
 
-#user-greeting {
+.title {
     display: flex;
-    flex-direction: row;
-    justify-content: left;
     align-items: center;
-    font-family: din-2014;
-    font-weight: 700;
-    font-size: 18px;
-    color:rgb(0, 0, 0);
-    text-align: left;
-    background-color: #EFEFEF;
-    padding-top: 10px;
-    padding-left: 5px;
-    margin-bottom: 10px;
-}
-
-#spacer {
-    width: 100px;
-    height: 1px;
-    border-top: #DDDDDD 1px solid;
-}
-
-#sidebar-demo {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 350px;
-    background-color: #EFEFEF;
-}
-
-#browse-topics {
-    height: 1vh;
-    color:rgb(0, 0, 0);
-    font-family: din-2014;
-    font-weight: 700;
-    font-size: 15px;
-    padding-left: 0.3vw;
-}
-
-#topics-display {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: left;
-    width: 150px;
+    justify-content: center;
     height: 50px;
-    border: solid #DDDDDD 0.5px;
-    background-color: rgba(255, 255, 255, 0.25);
-    gap: 0.25vw;
+    width: 150px;
+    font-family: din-2014, sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    color: black;
+    border-bottom: 1px solid grey;
 }
 
-#topics-display:hover {
-    background-color: #DDDDDD;
-    cursor: pointer;
-}
-
-#topics-container {
+.link {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    width:20vw;
-    height: 50px;
-    border: solid rgba(0, 0, 0, 0.25) 1px;
-    background-color: rgb(231, 231, 231);
+    gap: 10px;
+    padding: 5px;
+    height: 39px;
+    width: 140px;
+    border-bottom: 1px solid grey;
+    cursor: pointer;
 }
 
-#topic-name-link {
-    font-family: din-2014;
+.image {
+    width: 25px;
+    height: 25px;
+    object-fit: contain;
+    object-position: center;
+    border-radius: 5px;
+}
+
+.topic {
+    width: 100px;
+    height: 25px;
+    font-family: din-2014, sans-serif;
     font-weight: 700;
-    font-size: 15px;
-    color:rgba(0, 0, 0, 0.5);
-    text-decoration: none;
-    text-align: center;
+    font-size: 12px;
 }
 
-#vegetables {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic1.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#tofu {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic2.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#pasta {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic3.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#chicken {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic4.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#beef {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic5.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#pork {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic6.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#fish {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic7.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#shellfish {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic8.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#grilling {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic9.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-#dessert {
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/square/topic10.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius: 25%;
-    margin-left: 0.25vw;
-}
-
-
-#developer-sidebar-container {
-    display: flex;
-    flex-direction: column;
-    background-color: #EFEFEF;
-    height: 0px;
-    min-width: 150px;
-    position: fixed;
-    top: 100px;
-    left: 80%;
-    border: #DDDDDD solid 1px;
-    padding-left: 10px;
-}
-
-.links {
-    /* height: 1vh; */
-    width: auto;
-    color: rgba(184, 38, 37);
-
-  }
-
-  #developer-display {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: left;
-    /* width: 300px; */
-    /* height: 200px; */
-    border: solid #DDDDDD 0.5px;
-    background-color: rgba(255, 255, 255, 0.25);
-    gap: 0.25vw;
+.topic:hover {
+    cursor: pointer;
 }
