--- a/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/frontend/src/components/Sidebar/Sidebar.module.css
@@ -4,7 +4,7 @@
     background-color: #EFEFEF;
     height: 550px;
     width: 150px;
-    border: #DDDDDD solid 1px;
+    border: 1px solid #DDDDDD;
     border-radius: 5px;
 }
 
@@ -18,7 +18,7 @@
     font-weight: 700;
     font-size: 16px;
     color: black;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #BDBDBD;
 }
 
 .link {
@@ -30,7 +30,12 @@
     padding: 5px;
     height: 39px;
     width: 140px;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #BDBDBD;
+    text-decoration: none;
+}
+
+.link:hover {
+    background-color: rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
 
@@ -42,14 +47,24 @@
     border-radius: 5px;
 }
 
+.image:hover {
+    width: 30px;
+    height: 30px;
+}
+
 .topic {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     width: 100px;
     height: 25px;
     font-family: din-2014, sans-serif;
     font-weight: 700;
     font-size: 12px;
+    color: black;
 }
 
 .topic:hover {
     cursor: pointer;
+    text-decoration: underline;
 }
