--- a/frontend/src/components/Navbar/Searchbar/Searchbar.module.css
+++ b/frontend/src/components/Navbar/Searchbar/Searchbar.module.css
@@ -1,78 +1,100 @@
 .searchbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color:rgb(184, 38, 37);
-    border: 0.25px solid white;
-    border-radius: 0.5rem;
-    height: 45px;
-    min-width: 200px;
-    margin-right: 20px;
-    position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 5px;
+  align-items: center;
+  background-color:rgb(184, 38, 37);
+  border: 1px solid white;
+  border-radius: 5px;
+  height: 30px;
+  width: 20vw;
+  max-width: 450px;
+  min-width: 150px;
+  padding-right: 5px;
 }
 
-.icon {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    object-fit: contain;
-    object-position: center;
+.iconBox {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5px;
+  background-color:rgb(184, 38, 37);
+  border-radius: 5px;
+  z-index: 10;
+}
+
+.magnify {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+  object-position: center;
+}
+
+.cancel {
+  width: 15px;
+  height: 15px;
+  object-fit: contain;
+  object-position: center;
 }
 
 .form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 80px;
-    width: 13vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 30px;
+  width: 17vw;
+  max-width: 398px;
+  min-width: 80px;
 }
 
 .input{
-    color: white;
-    font-family: din-2014, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    font-style: normal;
-    position: absolute;
-    height:30px;
-    min-width:150px;
-    background-color:rgba(1, 1, 1, 0);
-    border: 0px;
+  color: white;
+  font-family: din-2014, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  font-style: normal;
+  position: absolute;
+  height: 30px;
+  max-width: 398px;
+  width: 16vw;
+  min-width: 80px;
+  background-color:rgba(1, 1, 1, 0);
+  border: 0px;
 }
 
 .input:focus {
-    outline: none;
+  outline: none;
 }
 
 .input::-webkit-input-placeholder {
-    color: lightgrey;
-    font-family: din-2014, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    font-style: normal;
-  }
+  color: lightgrey;
+  font-family: din-2014, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  font-style: normal;
+}
 
-.input:-ms-input-placeholder {
-    color: lightgrey;
-    font-family: din-2014, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    font-style: normal;
-  }
+.input::-ms-input-placeholder {
+  color: lightgrey;
+  font-family: din-2014, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .input::-moz-input-placeholder {
-    color: lightgrey;
-    font-family: din-2014, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    font-style: normal;
-  }
+  color: lightgrey;
+  font-family: din-2014, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  font-style: normal;
+}
 
-.input:-moz-input-placeholder {
-    color: lightgrey;
-    font-family: din-2014, sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    font-style: normal;
-  }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
